--- a/css1.css
+++ b/css1.css
@@ -1,22 +1,20 @@
-.carousel-inner img {
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
+    width: 75vw;
+    max-width: 1000px;
+    min-width: 320px;
+    margin: auto;
+}
+
+img {
     width: 100%;
-    max-height: 500px;
-}
-
-.carousel-inner{
- height: 500px;
-}
-
-.contenedor {
-    width: 60%;
-    max-width: 1200px;
-    margin: 0 auto;
-    background-color: rgb(255, 255, 255);
-    text-align: center;
-    margin-top: 50px;
-    padding: 20px;
-    box-shadow: 2px 2px 7px rgb(187, 198, 214);
-    border-radius: 10px;
+    border-radius: 15px;
+    box-shadow: 0px 3px 5px rgba(15, 15, 15, .5);
 }
 
 @media (max-width: 600px) {
@@ -25,7 +23,7 @@
     }
 }
 
-.contenedor {
+.contenedor2 {
     width: 60%;
     max-width: 1200px;
     margin: 0 auto;
